--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="product_image_desc">Product Image</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="tab_added_to_cart">Add to Cart</string>
+    <string name="tab_order_products">Ordered Products</string>
+    <string name="desc_add_to_cart">Navigate to the Add to Cart section</string>
+    <string name="desc_ordered_products">Navigate to the Ordered Products section</string>
 </resources>
